--- a/index.html
+++ b/index.html
@@ -3,14 +3,23 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover,user-scalable=no" />
-<title>五秒GOAL挑戰｜長按到 5 秒放開</title>
+<title>五秒 GOAL 挑戰｜長按到 5 秒放開</title>
 <style>
 :root{
+  /* 場景色 */
   --grass1:#0f8a3b; --grass2:#0c6f31; --brand:#ffcc00;
   --digit:#ff3b30; --digitGlow:rgba(255,80,60,.55);
-  --ball-speed: 2.0s;      /* 足球左右移動速度 */
-  --ball-amplitude: 240px; /* 左右移動幅度 */
+
+  /* 足球軌道設定（你畫紅圈的位置）*/
+  --ball-track-x: 32%;      /* 軌道水平中心（越小越靠左；可調 28%~40%） */
+  --ball-track-bottom: 210px;/* 距底部高度（可調 180~240px，依你畫面） */
+
+  /* 移動節奏 */
+  --ball-speed: 2.0s;       /* 左右來回速度 */
+  --ball-amplitude: 120px;  /* 左右位移幅度（軌道寬度的一半） */
 }
+
+/* 基本樣式 */
 *{box-sizing:border-box}
 html,body{height:100%;margin:0}
 body{
@@ -22,43 +31,36 @@ body{
 .card{
   width:min(92vw,720px); padding:24px 20px 32px; border-radius:22px;
   background:linear-gradient(180deg,rgba(255,255,255,.18),rgba(255,255,255,.08));
-  border:1px solid rgba(255,255,255,.28);
-  box-shadow:0 18px 38px rgba(0,0,0,.28); text-align:center; position:relative; overflow:hidden;
+  border:1px solid rgba(255,255,255,.28); text-align:center; position:relative; overflow:hidden;
+  box-shadow:0 18px 38px rgba(0,0,0,.28);
 }
 .logo{ width:clamp(120px,28%,220px); display:block; margin:0 auto 16px; filter:drop-shadow(0 0 4px rgba(0,0,0,.35)); }
 
-/* 球門與足球 */
+/* 球門 & 足球 */
 .stadium{height:170px; display:flex; align-items:center; justify-content:center; margin-bottom:10px; filter:drop-shadow(0 6px 14px rgba(0,0,0,.28))}
 .goal{width:82%; max-width:560px}
+
 .ball{
-  position:absolute; bottom:28px; left:50%; transform:translateX(-50%);
-  width:80px; height:80px;
+  position:absolute;
+  left: var(--ball-track-x);
+  bottom: var(--ball-track-bottom);
+  transform: translateX(-50%);
+  width:78px; height:78px;
   animation: ball-move var(--ball-speed) linear infinite alternate;
-  animation-play-state: paused; will-change: transform;
+  animation-play-state: paused;          /* 長按時才開始跑 */
+  will-change: transform;
+  pointer-events:none;
 }
 .ball.running{ animation-play-state: running; }
 .ball img{ width:100%; height:100%; object-fit:contain; display:block; }
+
+/* 左右往返（以軌道中心為基準） */
 @keyframes ball-move{
   0%   { transform: translateX(calc(-50% - var(--ball-amplitude))); }
   100% { transform: translateX(calc(-50% + var(--ball-amplitude))); }
 }
 
-/* 進球/撲救（放開後用） */
-.ball.scored{ animation: kick 900ms cubic-bezier(.2,.7,.2,1) forwards }
-@keyframes kick{
-  0%{ transform:translate(-50%,0) scale(1) }
-  45%{ transform:translate(-50%,-120px) scale(1.02) }
-  100%{ transform:translate(-50%,-150px) scale(.92) }
-}
-.ball.saved{ animation: saved 520ms ease-in-out }
-@keyframes saved{
-  0%{ transform:translate(-50%,0) }
-  25%{ transform:translate(calc(-50% - 24px),-10px) rotate(-8deg)}
-  50%{ transform:translate(calc(-50% + 20px),-6px) rotate(6deg)}
-  100%{ transform:translate(-50%,0) }
-}
-
-/* 計時數字：秒:百分秒（00:00） */
+/* 計時器（秒:百分秒） */
 .board{
   width:min(88%,520px); margin:10px auto 10px; padding:20px 24px;
   background:linear-gradient(180deg,#0a0a0a,#1a1a1a);
@@ -81,15 +83,13 @@ body{
   -webkit-user-select:none; user-select:none; -webkit-touch-callout:none; touch-action:manipulation;
   transition: transform .06s ease;
 }
-.btn.hold{ transform: scale(0.98); } /* 按住的視覺回饋 */
+.btn.hold{ transform: scale(0.98); }
 .result{min-height:38px; font-weight:800; margin-top:10px}
 
-/* 盛大進球效果：強光 + GOAL 橫幅 + 五彩紙屑 */
+/* 進球特效 */
 .flash{position:absolute; inset:-20%; pointer-events:none; opacity:0; background:radial-gradient(circle at 50% 40%, rgba(255,255,160,.85), rgba(255,255,160,0) 45%)}
 .flash.show{animation:flash .9s ease-out}
 @keyframes flash{from{opacity:1}to{opacity:0}}
-
-/* GOAL 橫幅 + 挑戰成功（加大加亮） */
 .goal-banner{
   position:absolute; top:12px; left:50%; transform:translateX(-50%) scale(.9);
   background:linear-gradient(180deg,#ffed7a,#ffc400);
@@ -104,22 +104,11 @@ body{
   animation: success-pop .9s cubic-bezier(.2,.9,.2,1) .05s both, success-glow 1.6s ease-in-out 1.2s 3;
 }
 .goal-banner.show{ animation: banner-pop .9s cubic-bezier(.2,.9,.2,1) forwards }
-@keyframes banner-pop{
-  0%{opacity:0; transform:translateX(-50%) translateY(-18px) scale(.8)}
-  60%{opacity:1; transform:translateX(-50%) translateY(0) scale(1.06)}
-  100%{opacity:1; transform:translateX(-50%) translateY(0) scale(1)}
-}
-@keyframes success-pop{
-  0%{transform:translateY(-6px) scale(.9); opacity:0}
-  60%{transform:translateY(0) scale(1.08); opacity:1}
-  100%{transform:translateY(0) scale(1)}
-}
-@keyframes success-glow{
-  0%,100%{ text-shadow:none }
-  50%{ text-shadow:0 0 15px rgba(255,220,0,.9), 0 0 30px rgba(255,220,0,1) }
-}
+@keyframes banner-pop{ 0%{opacity:0; transform:translateX(-50%) translateY(-18px) scale(.8)} 60%{opacity:1; transform:translateX(-50%) translateY(0) scale(1.06)} 100%{opacity:1; transform:translateX(-50%) translateY(0) scale(1)} }
+@keyframes success-pop{ 0%{transform:translateY(-6px) scale(.9); opacity:0} 60%{transform:translateY(0) scale(1.08); opacity:1} 100%{transform:translateY(0) scale(1)} }
+@keyframes success-glow{ 0%,100%{ text-shadow:none } 50%{ text-shadow:0 0 15px rgba(255,220,0,.9), 0 0 30px rgba(255,220,0,1) } }
 
-/* 五彩紙屑 */
+/* 紙屑 */
 .confetti{ position:absolute; width:10px; height:16px; opacity:.95; top:-20px; left:0; }
 @keyframes confetti-fall{ to { transform: translateY(120vh) rotate(720deg); } }
 
@@ -137,14 +126,10 @@ body{
   <div class="card">
     <img src="logo.png" alt="活動LOGO" class="logo">
 
-    <!-- 盛大進球效果層 -->
     <div class="flash" id="flash"></div>
-    <div class="goal-banner" id="banner">
-      GOAL!!
-      <span class="success">挑戰成功！</span>
-    </div>
+    <div class="goal-banner" id="banner">GOAL!!<span class="success">挑戰成功！</span></div>
 
-    <!-- 球門 + 足球 -->
+    <!-- 球門 -->
     <div class="stadium">
       <svg class="goal" viewBox="0 0 640 220" aria-hidden="true">
         <defs><pattern id="net" width="16" height="16" patternUnits="userSpaceOnUse">
@@ -153,34 +138,33 @@ body{
         <rect x="60" y="24" width="520" height="160" fill="url(#net)" stroke="rgba(255,255,255,.6)" stroke-width="6" rx="8"/>
         <rect x="40" y="12" width="560" height="188" fill="none" stroke="rgba(255,255,255,.85)" stroke-width="10" rx="14"/>
       </svg>
-      <div class="ball" id="ball" aria-hidden="true"><img src="soccer.png" alt="soccer ball"/></div>
     </div>
+
+    <!-- 足球：在左側軌道左右移動 -->
+    <div class="ball" id="ball" aria-hidden="true"><img src="soccer.png" alt="soccer ball"/></div>
 
     <h1>五秒GOAL挑戰</h1>
     <p class="sub">玩法：<b>按住</b>下方按鈕開始計時，<b>在 5 秒</b>時<b>放開</b>就進球！</p>
 
-    <!-- 計時顯示（秒：百分秒） -->
     <div class="board"><div id="timer" class="digits">00:00</div></div>
 
-    <div class="actions"><button class="btn" id="holdBtn" aria-label="按住開始，放開射門">按住開始，放開射門</button></div>
+    <div class="actions"><button class="btn" id="holdBtn" aria-label="按住開始，5 秒放開">按住開始，放開射門</button></div>
     <div class="result" id="result"></div>
   </div>
 
-  <!-- QR 視窗（IG 文案） -->
+  <!-- QR 視窗 -->
   <div class="modal" id="qrModal" role="dialog" aria-modal="true" aria-labelledby="qrTitle">
     <div class="modal-card">
       <h3 id="qrTitle">歡迎追蹤 ABC-MART 官方 IG！</h3>
       <p>掃描下方 QR Code 看更多活動與最新消息 👟</p>
       <a href="https://www.qrcode-tiger.com" target="_blank" rel="noopener">
-        <img class="qr" src="https://qrtiger.com/temp/1761104055255.png"
-             alt="官方 IG QR Code"
+        <img class="qr" src="https://qrtiger.com/temp/1761104055255.png" alt="官方 IG QR Code"
              onerror="this.onerror=null; this.src='qrcode.png';" />
       </a>
       <button class="close" id="closeQr">我已掃描</button>
     </div>
   </div>
 
-  <!-- 進球音效 -->
   <audio id="goalSound" src="goal.aac" preload="auto"></audio>
 
 <script>
@@ -189,25 +173,45 @@ body{
   const holdBtn  = document.getElementById('holdBtn');
   const resultEl = document.getElementById('result');
   const ballEl   = document.getElementById('ball');
+  const goalSvg  = document.querySelector('.goal');
   const flashEl  = document.getElementById('flash');
   const bannerEl = document.getElementById('banner');
   const qrModal  = document.getElementById('qrModal');
   const closeQr  = document.getElementById('closeQr');
   const goalSound= document.getElementById('goalSound');
 
-  // 避免長按跳出選單 / 長按馬上觸發
+  // 防止長按跳出選單
   document.addEventListener('contextmenu', e => e.preventDefault(), {passive:false});
 
-  // 場控：QR 延後 2 秒
-  const CFG = { QR_DELAY_MS: 2000, CONFETTI_COUNT: 160, CONFETTI_MIN_DUR: 1.8, CONFETTI_MAX_DUR: 3.0 };
+  // 場控（手機順暢）
+  const CFG = { QR_DELAY_MS: 2000, CONFETTI_COUNT: 120, CONFETTI_MIN_DUR: 1.6, CONFETTI_MAX_DUR: 2.8 };
 
   let startTime = 0, ticker = 0, running = false;
 
-  // 秒:百分秒
+  // 秒:百分秒格式
   const pad2 = n => n.toString().padStart(2,'0');
-  function fmtSSCC(ms){
-    const t = ms/1000, s = Math.floor(t), cs = Math.floor((t - s)*100);
-    return `${pad2(s)}:${pad2(cs)}`;
+  const fmtSSCC = ms => { const t=ms/1000,s=Math.floor(t),cs=Math.floor((t-s)*100); return `${pad2(s)}:${pad2(cs)}`; };
+
+  // —— 射門動畫：從當前位置飛到球門（拋物線） —— //
+  function kickToGoal(){
+    // 取得目前足球中心與球門中上方的目標點
+    const ball = ballEl.getBoundingClientRect();
+    const goal = goalSvg.getBoundingClientRect();
+
+    const startX = 0, startY = 0; // 以目前 transform 為 0,0 起點
+    const dx = (goal.left + goal.width/2) - (ball.left + ball.width/2);
+    const dy = (goal.top + goal.height*0.35) - (ball.top + ball.height/2);
+
+    // 使用 Web Animations 疊加在現有 transform 上
+    const anim = ballEl.animate(
+      [
+        { transform: `translate(0px,0px)` },
+        { transform: `translate(${dx*0.6}px, ${dy-140}px)` }, // 拉出拋物線頂點
+        { transform: `translate(${dx}px, ${dy}px)` }
+      ],
+      { duration: 850, easing: 'cubic-bezier(.2,.7,.2,1)', fill: 'forwards', composite: 'add' }
+    );
+    return anim.finished.catch(()=>{});
   }
 
   function start(){
@@ -216,47 +220,71 @@ body{
     startTime = performance.now();
     resultEl.textContent = '';
     timerEl.textContent = '00:00';
+
+    // 重置視覺
+    ballEl.getAnimations().forEach(a=>a.cancel());
+    ballEl.style.transform = 'translateX(-50%)'; // 回到軌道基準
     ballEl.classList.remove('scored','saved');
     flashEl.classList.remove('show'); bannerEl.classList.remove('show');
     clearConfetti();
+
+    // 開始左右移動
     ballEl.classList.add('running');
     holdBtn.classList.add('hold');
     holdBtn.textContent = '放開射門！';
-    // 輕量更新：每 50ms 更新一次數字，手機更順暢
+
+    // 輕量計時（50ms 更新一次）
     ticker = setInterval(()=>{
-      const elapsedMs = performance.now() - startTime;
-      timerEl.textContent = fmtSSCC(elapsedMs);
+      timerEl.textContent = fmtSSCC(performance.now() - startTime);
     }, 50);
   }
 
-  function stop(byCancel=false){
+  async function stop(byCancel=false){
     if(!running) return;
     running = false;
     clearInterval(ticker);
     const elapsed = (performance.now() - startTime)/1000;
     timerEl.textContent = fmtSSCC(elapsed*1000);
+
+    // 停止左右移動
     ballEl.classList.remove('running');
     holdBtn.classList.remove('hold');
     holdBtn.textContent = '按住開始，放開射門';
 
-    // 若是 pointercancel 等非正常放開也直接結算（你要改成「作廢」也行）
     const secInt = Math.floor(elapsed);
+
     if (!byCancel && secInt === 5){
-      resultEl.innerHTML = 'GOAL!! 五秒命中 🎉<br><span class="success-text" style="display:block;color:#ffeb3b;font-size:clamp(28px,6vw,44px);text-shadow:0 0 14px rgba(255,235,59,.95),0 0 36px rgba(255,235,59,.95);font-weight:900;animation:success-pop .9s both, success-glow 1.6s ease-in-out 1.2s 3;">挑戰成功！</span>';
-      ballEl.classList.add('scored'); flashEl.classList.add('show'); bannerEl.classList.add('show');
-      try { goalSound.currentTime = 0; goalSound.play(); } catch(e){}
+      // 射門：先飛向球門 → 再播特效
+      await kickToGoal();
+      resultEl.innerHTML = 'GOAL!! 五秒命中 🎉<br><span style="display:block;color:#ffeb3b;font-size:clamp(28px,6vw,44px);text-shadow:0 0 14px rgba(255,235,59,.95),0 0 36px rgba(255,235,59,.95);font-weight:900;">挑戰成功！</span>';
+      flashEl.classList.add('show');
+      bannerEl.classList.add('show');
+      try{ goalSound.currentTime=0; goalSound.play(); }catch(e){}
       launchConfetti();
       setTimeout(()=> qrModal.classList.add('show'), CFG.QR_DELAY_MS);
     }else if (secInt < 5){
       resultEl.textContent = '太早了！再抓一下節奏～';
-      ballEl.classList.add('saved');
+      // 小撲救：左右晃一下
+      ballEl.animate(
+        [{transform:'translateX(-50%)'},
+         {transform:'translateX(calc(-50% - 20px)) rotate(-6deg)'},
+         {transform:'translateX(calc(-50% + 16px)) rotate(6deg)'},
+         {transform:'translateX(-50%)'}],
+        {duration:420, easing:'ease-in-out'}
+      );
     }else{
       resultEl.textContent = '太晚了！差一點點～';
-      ballEl.classList.add('saved');
+      ballEl.animate(
+        [{transform:'translateX(-50%)'},
+         {transform:'translateX(calc(-50% + 16px)) rotate(6deg)'},
+         {transform:'translateX(calc(-50% - 20px)) rotate(-6deg)'},
+         {transform:'translateX(-50%)'}],
+        {duration:420, easing:'ease-in-out'}
+      );
     }
   }
 
-  // —— 彩帶 —— //
+  // —— 紙屑 —— //
   function launchConfetti(){
     const colors = ['#ffd700','#ff6b6b','#4cd964','#5ac8fa','#ff9f0a','#af52de','#ff3b30'];
     for(let i=0;i<CFG.CONFETTI_COUNT;i++){
@@ -276,16 +304,11 @@ body{
   }
   function clearConfetti(){ document.querySelectorAll('.confetti').forEach(e=>e.remove()); }
 
-  // —— 事件：使用 pointer 系列，手機零延遲 —— //
+  // —— 事件：pointer 系列，手機零延遲 —— //
   holdBtn.addEventListener('pointerdown', e => { e.preventDefault(); start(); }, {passive:false});
-  // 放開、拖出、取消 都視為停止
   holdBtn.addEventListener('pointerup',   e => { e.preventDefault(); stop(false); }, {passive:false});
   holdBtn.addEventListener('pointercancel', e => { e.preventDefault(); stop(true); }, {passive:false});
   holdBtn.addEventListener('pointerleave',  e => { if(running){ e.preventDefault(); stop(false); } }, {passive:false});
-
-  // 鍵盤備援（電腦場控方便）：空白/Enter 長按
-  document.addEventListener('keydown', e => { if((e.code==='Space'||e.key==='Enter')&&!running){ e.preventDefault(); start(); } }, {passive:false});
-  document.addEventListener('keyup',   e => { if(e.code==='Space'||e.key==='Enter'){ e.preventDefault(); stop(false); } }, {passive:false});
 
   // 關閉 QR
   closeQr.addEventListener('pointerdown', ()=> qrModal.classList.remove('show'));
